--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       run: winget install -e --id Python.Python.3.12 --silent --accept-source-agreements --accept-package-agreements
 
     - name: install dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r CIfolder/requirements.txt
       
     - name: run Test
       run: pytets CIfolder/test.py
