--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
       run: pip install -r CIfolder/requirements.txt
       
     - name: run Test
-      run: pytets CIfolder/test.py
+      run: pytest CIfolder/test.py
     
