--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,11 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: checkout code
       run: git clone https://github.com/learning76-ALI/CI_CD.git CIfolder
-      
-    - name: install Python and pip
-      run: winget install -e --id Python.Python.3.12 --silent --accept-source-agreements --accept-package-agreements
 
     - name: install dependencies
       run: pip install -r CIfolder/requirements.txt
