--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
 
     steps:
     - name: checkout code
-      uses: actions/checkout@4 CIfolder
+      uses: actions/checkout@4
       
     - name: install Python and pip
       uses: actions/setup-python@v4
